core.cfn/routes/template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Routes Template
Parameters:
  InternetGatewayId:
    Description: ID of the internet gateway to route traffic out of VPC.
    Type: String
  Namespace:
    Description: Project namespace for tags.
    Type: String
  NatGatewayOneId:
    Description: ID of the NAT gateway to route traffic out of the VPC
    Type: String
  NatGatewayTwoId:
    Description: ID of the NAT gateway to route traffic out of the VPC
    Type: String
  SubnetPrivateOneId:
    Description: ID for a private subnet in a unique availability zone.
    Type: String
  SubnetPrivateTwoId:
    Description: ID for a private subnet in a unique availability zone.
    Type: String
  SubnetPublicOneId:
    Description: ID for a public subnet in a unique availability zone.
    Type: String
  SubnetPublicTwoId:
    Description: ID for a public subnet in a unique availability zone.
    Type: String
  VpcId:
    Description: VPC ID to add tables and routes to.
    Type: String
Resources:
  AssociationPrivateSubnetPrivateOne:
    Properties:
      RouteTableId:
        Ref: RouteTablePrivateOne
      SubnetId:
        Ref: SubnetPrivateOneId
    Type: AWS::EC2::SubnetRouteTableAssociation
  AssociationPrivateSubnetPrivateTwo:
    Properties:
      RouteTableId:
        Ref: RouteTablePrivateTwo
      SubnetId:
        Ref: SubnetPrivateTwoId
    Type: AWS::EC2::SubnetRouteTableAssociation
  AssociationPublicSubnetPublicOne:
    Properties:
      RouteTableId:
        Ref: RouteTablePublic
      SubnetId:
        Ref: SubnetPublicOneId
    Type: AWS::EC2::SubnetRouteTableAssociation
  AssociationPublicSubnetPublicTwo:
    Properties:
      RouteTableId:
        Ref: RouteTablePublic
      SubnetId:
        Ref: SubnetPublicTwoId
    Type: AWS::EC2::SubnetRouteTableAssociation
  RouteInternetGateway:
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGatewayId
      RouteTableId:
        Ref: RouteTablePublic
    Type: AWS::EC2::Route
  RouteNatGatewayOne:
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGatewayOneId
      RouteTableId:
        Ref: RouteTablePrivateOne
    Type: AWS::EC2::Route
  RouteNatGatewayTwo:
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGatewayTwoId
      RouteTableId:
        Ref: RouteTablePrivateTwo
    Type: AWS::EC2::Route
  RouteTablePrivateOne:
    Properties:
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${Namespace}-route-table-private-one
      VpcId:
        Ref: VpcId
    Type: AWS::EC2::RouteTable
  RouteTablePrivateTwo:
    Properties:
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${Namespace}-route-table-private-two
      VpcId:
        Ref: VpcId
    Type: AWS::EC2::RouteTable
  RouteTablePublic:
    Properties:
      Tags:
      - Key: Name
        Value:
          Fn::Sub: ${Namespace}-route-table-public
      VpcId:
        Ref: VpcId
    Type: AWS::EC2::RouteTable
